fix overflow

--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -171,9 +171,7 @@ body {
 
     section {
       position: relative;
-      &:not(:last-of-type) {
-        overflow: hidden;
-      }
+      overflow: hidden;
     }
   }
 
